--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="col-lg-6 mx-auto">
           <h3 class="lead mb-4 head-content">Full Stack Developer</h3>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a class="btn btn-primary btn-lg px-4 gap-3" href="https://www.linkedin.com/in/john-infant-j-6728a7244/">GitHub</a>
-            <a class="btn btn-outline-secondary btn-lg px-4" href="https://github.com/johninfant021?tab=repositories">LinkedIn</a>
+            <a class="btn btn-primary btn-lg px-4 gap-3" href="https://github.com/johninfant021?tab=repositories">GitHub</a>
+            <a class="btn btn-outline-secondary btn-lg px-4" href="https://www.linkedin.com/in/john-infant-j-6728a7244/">LinkedIn</a>
           </div>
         </div>
       </div>
