--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar sticky-top navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand fs-3" href="#home">Portfolio</a>
     <!-- Hamburger button -->
@@ -65,7 +65,7 @@
 </section>
 <section id="about">
     <div class="my-2">
-        <div class="p-2 text-center bg-body-tertiary">
+        <div class="p-2 text-center">
           <div class="container py-2">
             <h1 class="text-body-emphasis about-head over"data-aos="fade-right">About Me</h1>
             <p class="col-lg-12 mx-auto lead about-content fs-3" data-aos="zoom-out">
@@ -87,7 +87,7 @@
     <div class="container px-4 py-5" id="featured-3">
         <h2 class="pb-2 border-bottom over" data-aos="slide-right">Education</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 justify-content-evenly align-items-center">
-          <div class="feature col" data-aos="fade-right">
+          <div class="feature col" data-aos="zoom-in">
             <h3 class=" fs-4 text-body-emphasis body-cont-head">Kalasalingam University</h3>
             <h4 class=" fs-4 text-body-emphasis body-cont">Master of Computer Application </h4>
             <p class="fs-5 body-cont">2024-2026</p>
@@ -96,7 +96,7 @@
             <h3 class=" fs-4 body-cont-head text-body-emphasis">Rajapalayam Raju’s College </h3>
             <h4 class=" fs-4 body-cont text-body-emphasis">Bachelor of Computer Science</h4>
             <p class="fs-5 body-cont">2020-2023 - CGPA: 7.97</p></div>
-          <div class="feature col" data-aos="slide-left">
+          <div class="feature col" data-aos="zoom-in">
             <h3 class=" fs-4 body-cont-head text-body-emphasis">P.A.C.M Higher Secondary School</h3>
             <h4 class=" fs-4 body-cont-head text-body-emphasis">Rajapalayam </h4>
             <p class="fs-5 body-cont">Higher Secondary Education (2020) - 69%</p>
@@ -112,7 +112,7 @@
       <div class="col d-flex align-items-start w-40 justify-content-center">
         <div>
           <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Frontend</h3>
-          <ul class="fs-5 list-group" data-aos="slide-right">
+          <ul class="fs-5 list-group" data-aos="zoom-out">
             <li class="list-group-item">Html</li>
             <li class="list-group-item">Css</li>
             <li class="list-group-item">Bootstrap</li>
@@ -138,7 +138,7 @@
         <div>
           <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out" 
           >Tools</h3>
-          <ul class="fs-5 list-group" data-aos="slide-left">
+          <ul class="fs-5 list-group" data-aos="zoom-out">
             <li class="list-group-item">MS Word</li>
             <li class="list-group-item">MS Excel</li>
             <li class="list-group-item">MS PowerPoint</li>
@@ -149,7 +149,7 @@
   </div>
 </section>
 <section id="projects">
-  <div class="container col-xxl-8 px-4 py-5">
+  <div class="container col-xxl-8 px-2 py-4">
     <h2 class="pb-2 border-bottom over" data-aos="slide-right">My Projects</h2>
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5" data-aos="fade-down">
       <div class="col-10 col-sm-8 col-lg-6">
@@ -163,7 +163,7 @@
         </div>
       </div>
     </div>
-  </div> <div class="container col-xxl-8 px-4 py-5" data-aos="fade-down">
+  </div> <div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="./Screenshot 2025-06-06 140205.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -172,12 +172,12 @@
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">JI Consulting Services</h1>
         <p class="lead">Developed a responsive website for JI Consultant using React.js, HTML, and CSS to ensure optimal performance acrossdevices.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://nextwebi.netlify.app/">Click</a>
+          <a href="https://nextwebi.netlify.app/" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2">Click</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="container col-xxl-8 px-4 py-5" data-aos="fade-down">
+  <div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="./college-web.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
