--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: whitesmoke;">
 
 <nav class="navbar sticky-top navbar-expand-lg">
   <div class="container-fluid">
@@ -55,8 +55,8 @@
         <img class="d-block mx-auto mb-4 pro-img" data-aos-easing="ease-in-out" data-aos="slide-down" src="./FB_IMG_1739981634990.jpg" alt="" width="212" height="197">
         <h1 class="display-5 fw-bold text-body-emphasis head-name" data-aos="zoom-in">John Sahaya Infant J</h1>
         <div class="col-lg-6 mx-auto" data-aos="zoom-in">
-          <h3 class="lead mb-4 head-content"><i>Full Stack Developer</i></h3>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <h3 class="lead mb-4 head-content" data-aos="zoom-out"><i>Full Stack Developer</i></h3>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" data-aos="fade">
             <a class="btn btn-primary btn-lg px-4 gap-3" href="https://github.com/johninfant021?tab=repositories">GitHub</a>
             <a class="btn btn-outline-secondary btn-lg px-4" href="https://www.linkedin.com/in/john-infant-j-6728a7244/">LinkedIn</a>
           </div>
@@ -112,7 +112,7 @@
       <div class="col d-flex align-items-start w-40 justify-content-center">
         <div>
           <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Frontend</h3>
-          <ul class="fs-5 list-group" data-aos="zoom-out">
+          <ul class="fs-5 list-group" data-aos="zoom-in">
             <li class="list-group-item">Html</li>
             <li class="list-group-item">Css</li>
             <li class="list-group-item">Bootstrap</li>
@@ -138,7 +138,7 @@
         <div>
           <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out" 
           >Tools</h3>
-          <ul class="fs-5 list-group" data-aos="zoom-out">
+          <ul class="fs-5 list-group" data-aos="zoom-in">
             <li class="list-group-item">MS Word</li>
             <li class="list-group-item">MS Excel</li>
             <li class="list-group-item">MS PowerPoint</li>
@@ -159,7 +159,7 @@
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">RRC Information in Alexa <br> (Amazon Alexa Skills Development)</h1>
         <p class="lead">Developed voice-assisted functionality to fetch Rajapalayam Rajus College information using Python.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://developer.amazon.com/alexa/console/ask/build/custom/amzn1.ask.skill.2ee4f613-0abb-4908-90af-69def49223dc/development/en_US/dashboard" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2">Click</a>
+          <a href="https://developer.amazon.com/alexa/console/ask/build/custom/amzn1.ask.skill.2ee4f613-0abb-4908-90af-69def49223dc/development/en_US/dashboard" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">JI Consulting Services</h1>
         <p class="lead">Developed a responsive website for JI Consultant using React.js, HTML, and CSS to ensure optimal performance acrossdevices.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://nextwebi.netlify.app/" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2">Click</a>
+          <a href="https://nextwebi.netlify.app/" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">College Website using Bootstrap</h1>
         <p class="lead">Designed and developed a responsive website using Bootstrapframework</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://rajavtc.in" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2">Click</a>
+          <a href="https://rajavtc.in" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="">Click</a>
         </div>
       </div>
     </div>
