--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
       <h2 class="pb-2 px-4 border-bottom over">Contact Me</h2>
       <ul class="nav justify-content-center pb-3 mb-3">
         <li class="nav-item"><a href="tel:+918220192109" class="nav-link px-2 text-body-secondary">
-          <img src="./contact-book-svgrepo-com.svg" height="50" width="50" data-aos="zoom-in"/>
+          <img src="./contact-book-svgrepo-com.svg" height="50" width="50" data-aos="fade"/>
         </a></li>
         <li class="nav-item"><a href="mailto:johninfant021@gmail.com" class="nav-link px-2 text-body-secondary">
-          <img src="./gmail-svgrepo-com.svg" height="50" width="50" data-aos="zoom-in" />
+          <img src="./gmail-svgrepo-com.svg" height="50" width="50" data-aos="fade" />
         </a></li>
       </ul>
     </footer>
