--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </nav>
 <section id="home">
     <div class="px-4 py-5 my-4 text-center">
-        <img class="d-block mx-auto mb-4 pro-img" data-aos-easing="ease-in-out" data-aos="slide-down" src="./FB_IMG_1739981634990.jpg" alt="" width="212" height="197">
+        <img class="d-block mx-auto mb-4 pro-img" data-aos-easing="ease-in-out" data-aos="zoom-out" src="./FB_IMG_1739981634990.jpg" alt="" width="212" height="197">
         <h1 class="display-5 fw-bold text-body-emphasis head-name" data-aos="zoom-in">John Sahaya Infant J</h1>
         <div class="col-lg-6 mx-auto" data-aos="zoom-in">
           <h3 class="lead mb-4 head-content" data-aos="zoom-out"><i>Full Stack Developer</i></h3>
