--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">College Website using Bootstrap</h1>
         <p class="lead">Designed and developed a responsive website using Bootstrapframework</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://rajavtc.in" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="">Click</a>
+          <a href="https://rajavtc.in" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
         </div>
       </div>
     </div>
