--- a/index.html
+++ b/index.html
@@ -163,7 +163,21 @@
         </div>
       </div>
     </div>
-  </div> <div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
+  </div>
+   <div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="./Screenshot 2025-06-06 140205.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">Food App <br> (E-Commerce)</h1>
+        <p class="lead">Developed a food ordering application using React.js, Express.js, and MongoDB.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="https://food-ecommerce-frontend.onrender.com " target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
+        </div>
+      </div>
+    </div>
+  </div><div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
         <img src="./Screenshot 2025-06-06 140205.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -180,11 +194,11 @@
   <div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="./college-web.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        <img src="./Screenshot 2025-06-17 201624.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">College Website using Bootstrap</h1>
-        <p class="lead">Designed and developed a responsive website using Bootstrapframework</p>
+        <p class="lead">Designed and developed a responsive website using Bootstrap framework</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a href="https://rajavtc.in" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
         </div>
