--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
       <div class="col d-flex align-items-start w-40 justify-content-center">
         <div>
           <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out" 
-          >Tools</h3>
+          >Others</h3>
           <ul class="fs-5 list-group" data-aos="zoom-in">
+            <li class="list-group-item">Netlify</li>
+            <li class="list-group-item">Render</li>
             <li class="list-group-item">MS Word</li>
             <li class="list-group-item">MS Excel</li>
             <li class="list-group-item">MS PowerPoint</li>
@@ -149,25 +151,10 @@
   </div>
 </section>
 <section id="projects">
-  <div class="container col-xxl-8 px-2 py-4">
-    <h2 class="pb-2 border-bottom over" data-aos="slide-right">My Projects</h2>
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5" data-aos="fade-down">
-      <div class="col-10 col-sm-8 col-lg-6">
-        <img src="./alexa project.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-      </div>
-      <div class="col-lg-6">
-        <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">RRC Information in Alexa <br> (Amazon Alexa Skills Development)</h1>
-        <p class="lead">Developed voice-assisted functionality to fetch Rajapalayam Rajus College information using Python.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://developer.amazon.com/alexa/console/ask/build/custom/amzn1.ask.skill.2ee4f613-0abb-4908-90af-69def49223dc/development/en_US/dashboard" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
-        </div>
-      </div>
-    </div>
-  </div>
    <div class="container col-xxl-8 px-2 py-4" data-aos="fade-down">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="./Screenshot 2025-06-06 140205.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        <img src=".//Screenshot 2025-06-18 000014.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">Food App <br> (E-Commerce)</h1>
@@ -187,6 +174,21 @@
         <p class="lead">Developed a responsive website for JI Consultant using React.js, HTML, and CSS to ensure optimal performance acrossdevices.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <a href="https://nextwebi.netlify.app/" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="container col-xxl-8 px-2 py-4">
+    <h2 class="pb-2 border-bottom over" data-aos="slide-right">My Projects</h2>
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5" data-aos="fade-down">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="./alexa project.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">RRC Information in Alexa <br> (Amazon Alexa Skills Development)</h1>
+        <p class="lead">Developed voice-assisted functionality to fetch Rajapalayam Rajus College information using Python.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="https://developer.amazon.com/alexa/console/ask/build/custom/amzn1.ask.skill.2ee4f613-0abb-4908-90af-69def49223dc/development/en_US/dashboard" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" style="box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;">Click</a>
         </div>
       </div>
     </div>
