--- a/index.html
+++ b/index.html
@@ -52,19 +52,54 @@
   </div>
 </nav>
   <div class="body-align">
-<section id="home">
-    <div class="px-4 py-5 my-4 text-center">
-        <img class="d-block mx-auto mb-4 pro-img" data-aos-easing="ease-in-out" data-aos="zoom-out" src="./FB_IMG_1739981634990.jpg" alt="" width="212" height="197">
-        <h1 class="display-5 fw-bold text-body-emphasis head-name" data-aos="zoom-in">John Sahaya Infant J</h1>
-        <div class="col-lg-6 mx-auto" data-aos="zoom-in">
-          <h3 class="lead mb-4 head-content" data-aos="zoom-out"><i>Full Stack Developer</i></h3>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" data-aos="fade">
-            <a class="btn btn-primary btn-lg px-4 gap-3" href="https://github.com/johninfant021?tab=repositories">GitHub</a>
-            <a class="btn btn-outline-secondary btn-lg px-4" href="https://www.linkedin.com/in/john-infant-j-6728a7244/">LinkedIn</a>
-          </div>
+<section id="home" class="vh-100 d-flex align-items-center">
+  <div class="container text-center">
+    <div class="row align-items-center justify-content-center">
+      
+      <!-- Profile Image -->
+      <div class="col-12 col-md-4 mb-4 mb-md-0">
+        <img 
+          class="img-fluid pro-img rounded shadow" 
+          src="./FB_IMG_1739981634990.jpg" 
+          alt="John Infant Profile" 
+          style="width: 250px; height: 250px; object-fit: cover;" 
+          data-aos="zoom-out"
+        >
+      </div>
+
+      <!-- Text Section -->
+      <div class="col-12 col-md-6">
+        <h1 class="display-6 fw-bold text-body-emphasis head-name" data-aos="zoom-in">
+          John Sahaya Infant J
+        </h1>
+
+        <h3 class="lead head-content mb-4" data-aos="zoom-out">
+          <i>Full Stack Developer</i>
+        </h3>
+
+        <div class="d-grid gap-3 d-sm-flex justify-content-center" data-aos="fade">
+          <a 
+            class="btn btn-primary btn-lg px-4" 
+            href="https://github.com/johninfant021?tab=repositories" 
+            target="_blank"
+          >
+            GitHub
+          </a>
+          <a 
+            class="btn btn-outline-secondary btn-lg px-4" 
+            href="https://www.linkedin.com/in/john-infant-j-6728a7244/" 
+            target="_blank"
+          >
+            LinkedIn
+          </a>
         </div>
       </div>
+
+    </div>
+  </div>
 </section>
+
+
 <section id="about" class="my-2">
   <div class="p-2 text-center">
     <div class="container py-2">
