--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 </nav>
   <div class="body-align">
-<section id="home" class="vh-100 d-flex align-items-center">
+<section id="home" class=" d-flex align-items-center">
   <div class="container text-center">
     <div class="row align-items-center justify-content-center">
       
