--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
         <div class="d-grid gap-3 d-sm-flex justify-content-center" data-aos="fade">
           <a 
-            class="btn btn-primary btn-lg px-4" 
+            class="btn btn-light btn-lg px-4" 
             href="https://github.com/johninfant021?tab=repositories" 
             target="_blank"
           >
             GitHub
           </a>
           <a 
-            class="btn btn-outline-secondary btn-lg px-4" 
+            class="btn btn-secondary btn-lg px-4 " 
             href="https://www.linkedin.com/in/john-infant-j-6728a7244/" 
             target="_blank"
           >
@@ -103,8 +103,8 @@
 <section id="about" class="my-2">
   <div class="p-2 text-center">
     <div class="container py-2">
-      <h1 class="text-body-emphasis about-head over" data-aos="fade-right">About Me</h1>
-      <p class="col-lg-12 mx-auto lead about-content fs-3" data-aos="zoom-out">
+      <h1 class="text-body-emphasis about-head over" data-aos="fade-up">About Me</h1>
+      <p class="col-lg-12 mx-auto lead about-content fs-3" data-aos="zoom-in">
         I am a highly organized and hardworking individual, eager to gain practical experience in the tech industry. I am seeking an opportunity with a company that offers challenges and supports both personal and professional growth.
         <br><br>
         As a motivated and detail-oriented Computer Science graduate, I have hands-on experience in Full Stack Development, Python, and Database Management. I am passionate about solving real-world problems through technology and look forward to contributing my skills in a dynamic and innovative environment.
@@ -198,19 +198,19 @@
 </section>
 
 <section id="projects">
-  <div class="container col-xxl-12 px-2 py-4" data-aos="fade-down">
+  <div class="container col-xxl-12 px-2 py-4">
     <h2 class="pb-2 over align-items-center" data-aos="slide-right">My Projects</h2>
 
     <!-- Project 1: Food App -->
     <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6 text-center">
-        <img src="./Screenshot 2025-06-18 000014.png" class="d-block mx-auto img-fluid" alt="Food App Screenshot" width="700" height="500" loading="lazy">
+        <img src="./Screenshot 2025-06-18 000014.png" class="d-block mx-auto img-fluid" alt="Food App Screenshot" width="700" height="500" loading="lazy"  data-aos="zoom-in">
       </div>
       <div class="col-lg-6">
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">Food App <br> (E-Commerce)</h1>
         <p class="lead">Built a food ordering application using React.js, Express.js, and MongoDB for efficient online food ordering and payment processing.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://food-ecommerce-frontend.onrender.com" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" title="View Food App Project">View Project</a>
+          <a href="https://food-ecommerce-frontend.onrender.com" target="_blank" class="btn btn-dark btn-lg px-4 me-md-2" title="View Food App Project">View Project</a>
         </div>
       </div>
     </div>
@@ -218,13 +218,13 @@
     <!-- Project 2: JI Consulting Services -->
     <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6 text-center">
-        <img src="./Screenshot 2025-06-06 140205.png" class="d-block mx-auto img-fluid" alt="JI Consulting Website Screenshot" width="700" height="500" loading="lazy">
+        <img src="./Screenshot 2025-06-06 140205.png" class="d-block mx-auto img-fluid" alt="JI Consulting Website Screenshot" width="700" height="500" loading="lazy"  data-aos="zoom-in">
       </div>
       <div class="col-lg-6">
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">JI Consulting Services</h1>
         <p class="lead">Developed a responsive business website using React.js, HTML, and CSS to ensure optimal performance across devices.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://nextwebi.netlify.app/" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" title="View JI Consulting Project">View Project</a>
+          <a href="https://nextwebi.netlify.app/" target="_blank" class="btn btn-dark btn-lg px-4 me-md-2" title="View JI Consulting Project">View Project</a>
         </div>
       </div>
     </div>
@@ -232,13 +232,13 @@
     <!-- Project 3: College Website -->
     <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6 text-center">
-        <img src="./Screenshot 2025-06-17 201624.png" class="d-block mx-auto img-fluid" alt="College Website Screenshot" width="700" height="500" loading="lazy">
+        <img src="./Screenshot 2025-06-17 201624.png" class="d-block mx-auto img-fluid" alt="College Website Screenshot" width="700" height="500" loading="lazy"  data-aos="zoom-in">
       </div>
       <div class="col-lg-6">
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">College Website using Bootstrap</h1>
         <p class="lead">Designed and developed a responsive college website using Bootstrap to ensure cross-device compatibility and clean UI.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://rajavtc.in" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" title="View College Website Project">View Project</a>
+          <a href="https://rajavtc.in" target="_blank" class="btn btn-dark btn-lg px-4 me-md-2" title="View College Website Project">View Project</a>
         </div>
       </div>
     </div>
@@ -246,13 +246,13 @@
     <!-- Project 4: Alexa Skill -->
     <div class="row flex-lg-row-reverse align-items-center justify-content-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6 text-center">
-        <img src="./alexa project.png" class="d-block mx-auto img-fluid" alt="Alexa Skill Screenshot" width="700" height="500" loading="lazy">
+        <img src="./alexa project.png" class="d-block mx-auto img-fluid" alt="Alexa Skill Screenshot" width="700" height="500" loading="lazy"  data-aos="zoom-in">
       </div>
       <div class="col-lg-6">
         <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head">RRC Information in Alexa <br> (Amazon Alexa Skills Development)</h1>
         <p class="lead">Built a voice-assisted Alexa skill using Python to provide Rajapalayam Rajus College information through Amazon Alexa.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <a href="https://developer.amazon.com/alexa/console/ask/build/custom/amzn1.ask.skill.2ee4f613-0abb-4908-90af-69def49223dc/development/en_US/dashboard" target="_blank" class="btn btn-primary btn-lg px-4 me-md-2" title="View Alexa Skill Project">View Project</a>
+          <a href="https://developer.amazon.com/alexa/console/ask/build/custom/amzn1.ask.skill.2ee4f613-0abb-4908-90af-69def49223dc/development/en_US/dashboard" target="_blank" class="btn btn-dark btn-lg px-4 me-md-2" title="View Alexa Skill Project">View Project</a>
         </div>
       </div>
     </div>
@@ -271,6 +271,16 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="https://www.instagram.com/john_infant__/" class="nav-link text-body-secondary" title="instagram">
+            <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="instagram-new" height="50" width="50" style="transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="https://wa.me/918220192109" class="nav-link text-body-secondary" title="whatsapp">
+            <img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="whatsapp" height="50" width="50" style="transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
+          </a> 
+        </li>
+        <li class="nav-item">
           <a href="mailto:johninfant021@gmail.com" class="nav-link text-body-secondary" title="Email Me">
             <img src="./gmail-svgrepo-com.svg" alt="Gmail Icon" height="50" width="50" style="transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
           </a>
@@ -284,7 +294,7 @@
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
   AOS.init({
-    duration: 3000,
+    duration: 2000,
     once: false // animate every time it comes into view
   });
 </script>
