--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 </nav>
   <div class="body-align">
-<section id="home" class=" d-flex align-items-center">
+<section id="home" class=" d-flex align-items-center py-5">
   <div class="container text-center">
     <div class="row align-items-center justify-content-center">
       
@@ -62,7 +62,7 @@
           class="img-fluid pro-img rounded shadow" 
           src="./FB_IMG_1739981634990.jpg" 
           alt="John Infant Profile" 
-          style="width: 250px; height: 250px; object-fit: cover;" 
+          style="width: 250px; height: auto; object-fit: cover;" 
           data-aos="zoom-out"
         >
       </div>
@@ -77,16 +77,16 @@
           <i>Full Stack Developer</i>
         </h3>
 
-        <div class="d-grid gap-3 d-sm-flex justify-content-center" data-aos="fade">
+        <div class="d-grid gap-3 d-md-flex justify-content-center" data-aos="fade">
           <a 
-            class="btn btn-light btn-lg px-4" 
+            class="btn btn-light btn-lg px-4 w-100 w-md-auto" 
             href="https://github.com/johninfant021?tab=repositories" 
             target="_blank"
           >
             GitHub
           </a>
           <a 
-            class="btn btn-secondary btn-lg px-4 " 
+            class="btn btn-secondary btn-lg px-4 w-100 w-md-auto" 
             href="https://www.linkedin.com/in/john-infant-j-6728a7244/" 
             target="_blank"
           >
@@ -100,7 +100,7 @@
 </section>
 
 
-<section id="about" class="my-2">
+<section id="about" class="my-5 py-4">
   <div class="p-2 text-center">
     <div class="container py-2">
       <h1 class="text-body-emphasis about-head over" data-aos="fade-up">About Me</h1>
@@ -113,7 +113,7 @@
   </div>
 </section>
 
-<section id="education" class="my-2">
+<section id="education" class="py-5">
   <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 over" data-aos="slide-right">Education</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 justify-content-evenly align-items-center">
@@ -121,15 +121,15 @@
       <!-- PG -->
       <div class="feature col" data-aos="zoom-in">
         <h3 class="fs-4 text-body-emphasis body-cont-head">Kalasalingam University</h3>
-        <h4 class="fs-4 text-body-emphasis body-cont">Master of Computer Applications</h4>
-        <p class="fs-5 body-cont">2024 – 2026</p>
+        <h4 class="fs-5 text-body-emphasis body-cont">Master of Computer Applications</h4>
+        <p class="fs-6 body-cont">2024 – 2026</p>
       </div>
 
       <!-- UG -->
       <div class="feature col" data-aos="zoom-in">
         <h3 class="fs-4 text-body-emphasis body-cont-head">Rajapalayam Raju’s College</h3>
-        <h4 class="fs-4 text-body-emphasis body-cont">Bachelor of Computer Science</h4>
-        <p class="fs-5 body-cont">2020 – 2023 | CGPA: 7.97</p>
+        <h4 class="fs-5 text-body-emphasis body-cont">Bachelor of Computer Science</h4>
+        <p class="fs-6 body-cont">2020 – 2023 | CGPA: 7.97</p>
       </div>
 
       <!-- School -->
@@ -145,16 +145,16 @@
   </div>
 </section>
 
-<section id="skills">
+<section id="skills" class="py-5">
   <div class="container" id="hanging-icons">
     <h2 class="pb-2 over" data-aos="slide-right">Technical Skills</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4 my-5 justify-content-center">
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 justify-content-center">
 
       <!-- Frontend Skills -->
       <div class="col d-flex justify-content-center">
         <div>
-          <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Frontend</h3>
-          <ul class="fs-5 list-group" data-aos="zoom-in">
+          <h3 class="fs-5 text-body-emphasis body-cont-head" data-aos="zoom-out">Frontend</h3>
+          <ul class="fs-6 list-group" data-aos="zoom-in">
             <li class="list-group-item">HTML</li>
             <li class="list-group-item">CSS</li>
             <li class="list-group-item">Bootstrap</li>
@@ -168,8 +168,8 @@
       <!-- Backend Skills -->
       <div class="col d-flex justify-content-center">
         <div>
-          <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Backend</h3>
-          <ul class="fs-5 list-group" data-aos="zoom-in">
+          <h3 class="fs-5 text-body-emphasis body-cont-head" data-aos="zoom-out">Backend</h3>
+          <ul class="fs-6 list-group" data-aos="zoom-in">
             <li class="list-group-item">Express JS</li>
             <li class="list-group-item">Node JS</li>
             <li class="list-group-item">Python</li>
@@ -182,8 +182,8 @@
       <!-- Other Tools -->
       <div class="col d-flex justify-content-center">
         <div>
-          <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Others</h3>
-          <ul class="fs-5 list-group" data-aos="zoom-in">
+          <h3 class="fs-5 text-body-emphasis body-cont-head" data-aos="zoom-out">Others</h3>
+          <ul class="fs-6 list-group" data-aos="zoom-in">
             <li class="list-group-item">Netlify</li>
             <li class="list-group-item">Render</li>
             <li class="list-group-item">MS Word</li>
