--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>John Infant</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="./John_Portfolio.css" />
   <link rel="icon" type="image/jpg" href="./FB_IMG_1739981634990.jpg"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
-<body style="background-color:#DCDCDC">
+<body style="background-color:#DCDCDC; max-width: 100%;">
 <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
   <div class="container-fluid">
     <!-- Brand -->
@@ -52,7 +52,7 @@
   </div>
 </nav>
   <div class="body-align">
-<section id="home" class=" d-flex align-items-center py-5">
+<section id="home" class=" d-flex align-items-center py-2">
   <div class="container text-center">
     <div class="row align-items-center justify-content-center">
       
@@ -77,7 +77,7 @@
           <i>Full Stack Developer</i>
         </h3>
 
-        <div class="d-grid gap-3 d-md-flex justify-content-center" data-aos="fade">
+        <div class="d-grid gap-3 d-md-flex justify-content-center" data-aos="fade-up">
           <a 
             class="btn btn-light btn-lg px-4 w-100 w-md-auto" 
             href="https://github.com/johninfant021?tab=repositories" 
@@ -98,12 +98,12 @@
     </div>
   </div>
 </section>
+<hr/>
 
-
-<section id="about" class="my-5 py-4">
+<section id="about" class="my-3 py-4">
   <div class="p-2 text-center">
     <div class="container py-2">
-      <h1 class="text-body-emphasis about-head over" data-aos="fade-up">About Me</h1>
+      <h1 class="text-body-emphasis about-head over" data-aos="slide-up">About Me</h1>
       <p class="col-lg-12 mx-auto lead about-content fs-3" data-aos="zoom-in">
         I am a highly organized and hardworking individual, eager to gain practical experience in the tech industry. I am seeking an opportunity with a company that offers challenges and supports both personal and professional growth.
         <br><br>
@@ -112,7 +112,7 @@
     </div>
   </div>
 </section>
-
+<hr/>
 <section id="education" class="py-5">
   <div class="container px-4 py-5" id="featured-3">
     <h2 class="pb-2 over" data-aos="slide-right">Education</h2>
@@ -144,7 +144,7 @@
     </div>
   </div>
 </section>
-
+<hr/>
 <section id="skills" class="py-5">
   <div class="container" id="hanging-icons">
     <h2 class="pb-2 over" data-aos="slide-right">Technical Skills</h2>
@@ -153,7 +153,7 @@
       <!-- Frontend Skills -->
       <div class="col d-flex justify-content-center">
         <div>
-          <h3 class="fs-5 text-body-emphasis body-cont-head" data-aos="zoom-out">Frontend</h3>
+          <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Frontend</h3>
           <ul class="fs-6 list-group" data-aos="zoom-in">
             <li class="list-group-item">HTML</li>
             <li class="list-group-item">CSS</li>
@@ -168,7 +168,7 @@
       <!-- Backend Skills -->
       <div class="col d-flex justify-content-center">
         <div>
-          <h3 class="fs-5 text-body-emphasis body-cont-head" data-aos="zoom-out">Backend</h3>
+          <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Backend</h3>
           <ul class="fs-6 list-group" data-aos="zoom-in">
             <li class="list-group-item">Express JS</li>
             <li class="list-group-item">Node JS</li>
@@ -182,7 +182,7 @@
       <!-- Other Tools -->
       <div class="col d-flex justify-content-center">
         <div>
-          <h3 class="fs-5 text-body-emphasis body-cont-head" data-aos="zoom-out">Others</h3>
+          <h3 class="fs-3 text-body-emphasis body-cont-head" data-aos="zoom-out">Others</h3>
           <ul class="fs-6 list-group" data-aos="zoom-in">
             <li class="list-group-item">Netlify</li>
             <li class="list-group-item">Render</li>
@@ -196,7 +196,7 @@
     </div>
   </div>
 </section>
-
+<hr/>
 <section id="projects">
   <div class="container col-xxl-12 px-2 py-4">
     <h2 class="pb-2 over align-items-center" data-aos="slide-right">My Projects</h2>
@@ -259,7 +259,7 @@
 
   </div>
 </section>
-
+<hr/>
 <section id="contact">
   <div class="container text-center py-5">
     <footer class="my-4">
