--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <h2 class="pb-2 over align-items-center" data-aos="slide-right">My Projects</h2>
         <div class="row flex-lg-row-reverse align-items-center justify-content-center text-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6 text-center">
-            <img src="./Screenshot 2025-07-22 105931.png" class="d-block mx-auto img-fluid" alt="Food App Screenshot"
+            <img src="./Screenshot 2025-07-22 105931.png" class="d-block mx-auto img-fluid" alt="Hike Gear Screenshot"
               width="700" height="500" loading="lazy" data-aos="zoom-in">
           </div>
           <div class="col-lg-6">
