--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -23,7 +24,7 @@
 </head>
 
 <body style="background-color:#DCDCDC; max-width: 100%;">
-  <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
+  <nav class="navbar sticky-top navbar-expand-lg ">
     <div class="container-fluid">
       <!-- Brand -->
       <a class="navbar-brand fs-3" href="#home">John Infant</a>
@@ -73,7 +74,7 @@
               John Sahaya Infant J
             </h1>
 
-            <h3 class="lead head-content mb-4" data-aos="zoom-out">
+            <h3 class="lead head-content mb-4 text-center" data-aos="zoom-out">
               <i>Full Stack Developer</i>
             </h3>
 
@@ -278,7 +279,8 @@
           <div class="col-lg-6">
             <h1 class="fs-2 fw-bold text-body-emphasis lh-1 mb-3 body-cont-head text-center">RRC Information in Alexa
               <br> (Amazon
-              Alexa Skills Development)</h1>
+              Alexa Skills Development)
+            </h1>
             <p class="lead">Built a voice-assisted Alexa skill using Python to provide Rajapalayam Rajus College
               information through Amazon Alexa.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-center">
