--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               John Sahaya Infant J
             </h1>
 
-            <h3 class="lead head-content mb-4 text-center" data-aos="zoom-out">
+            <h3 class="head-content mb-4 text-center" data-aos="zoom-out">
               <i>Full Stack Developer</i>
             </h3>
 
